test/yaml/testdata/input/iprange/allowlist-only.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iprange-ingress
  namespace: namespace1
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/24,192.168.1.0/24
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-ingress1
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-ingress1
  namespace: namespace1
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
